--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,4 @@
 {
-  "database": {
-    "rules": "database.rules.json"
-  },
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
@@ -9,16 +6,17 @@
   "hosting": {
     "public": ".output/public",
     "cleanUrls": true,
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
       }
     ]
-  },
-  "storage": {
-    "rules": "storage.rules"
   },
   "emulators": {
     "auth": {
@@ -27,14 +25,8 @@
     "firestore": {
       "port": 8081
     },
-    "database": {
-      "port": 9001
-    },
     "hosting": {
       "port": 5050
-    },
-    "storage": {
-      "port": 9199
     },
     "ui": {
       "enabled": true
